--- a/public/css/style.css
+++ b/public/css/style.css
@@ -117,8 +117,26 @@ body{
 }
 
 @media (max-width:999px){
+    /* navbar settings */
+    .navbar-collapse{
+        padding:10px;
+        z-index: 9999;
+        text-align: center;
+        background: black;
+        position: relative;
+    }
+    .navbar-collapse > ul{
+        width:100%;
+        margin:auto;
+    }
+    .navbar-collapse > ul>li{
+        margin-left:20px;
+    }
+    .navbar-collapse > ul > button{
+        margin-top:10px;
+    }
     .top{
-        height:500px;
+        height:700px;
     }
     .top-content{
         width:100%;
