--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,6 +7,4 @@
     <title>Home Page</title>
 
     <link rel="stylesheet" href="/static/css/bootstrap.css">
-    <link href="/static/css/style.css" rel="stylesheet">
-
-</head>
+    <link href="/static/css/common.css" rel="stylesheet">
