--- a/public/css/registration.css
+++ b/public/css/registration.css
@@ -50,8 +50,15 @@ body{
     padding-top:5%;
 }
 
+#error_name,#error_age,#error_pass{
+    width:100%;
+    margin-top:-5%;
+    padding:10px;
+    display:none;
+}
+
 form{
-    padding:15% 10% 10% 10%;
+    padding:6% 10% 10% 10%;
 }
 
 form label{
