--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -8,15 +8,20 @@
         <h1>Let's Sign you in.</h1>
         <h3 style="opacity: 0.5;">Welcome back. You have been missed!</h3>
         <form>
-            <input class="form-control" type="text" placeholder="Username">
-            <input class="form-control" type="password" placeholder="Password">
+            <input class="form-control" name="username" minlength="1" onblur=validate_username() type="text" placeholder="Username" required>
+            <div class="alert alert-danger" id="error_username"></div>
+
+            <input class="form-control" name="password" minlength="1" onblur=validate_password() type="password" placeholder="Password" required>
+            <div class="alert alert-danger" id="error_pass"></div>
+
             <!-- <center> -->
-                <button class="btn btn-outline-light">Sign In</button><br>
-                <span><span style="opacity: 0.5;">Don't have an account?</span>&nbsp;&nbsp;<a class="text-white" href="/index/signup">Register</a></span>
+                <button class="btn btn-outline-light" type="submit">Sign In</button><br>
             <!-- </center> -->
         </form>
+        <span><span style="opacity: 0.5;">Don't have an account?</span>&nbsp;&nbsp;<a class="text-white" href="/index/signup">Register</a></span>
+
     </div>
 
-</body>
 
+<script src="/static/js/validation-login.js"></script>
 <%- include("../partials/footer.ejs") %>
