--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,5 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
 
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <link rel="stylesheet" href="/static/css/bootstrap.css">
     <link href="/static/css/common.css" rel="stylesheet">
